add scroll to accordion functionality

--- a/accordion/src/index.css
+++ b/accordion/src/index.css
@@ -28,6 +28,9 @@ Global Styles
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Roboto", sans-serif;
   background: var(--section-color);
@@ -88,11 +91,11 @@ Project CSS
 */
 #accordion {
   background-color: var(--background-color);
-  min-height: 100vh;
+  min-height: 400vh;
   padding: 0 15px;
   display: flex;
+  padding-top: 120px;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
 }
 #accordion > h2 {
