--- a/cart-redux-toolkit-tutorial/src/index.css
+++ b/cart-redux-toolkit-tutorial/src/index.css
@@ -109,6 +109,25 @@ p {
   background: var(--clr-primary-light);
 }
 
+.loader {
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid var(--clr-primary);
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 0.5s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /*
 =============== 
 Navbar
